Share storage for model's data in source folder

--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,5 @@ nb-configuration.xml
 .env
 
 # Others
-/src/main/resources/designs/export/
+src/main/resources/designs/export/
+storage/properties
