Fix datasource issues

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ quarkus.http.auth.form.enabled=true
 
 # -- FORM AUTHENTICATTION
 quarkus.http.auth.form.login-page=/login
+
+# Miscellaneous
+# quarkus.resteasy-json.default-json=false
