Improve packaging of data's model

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,4 @@ quarkus.http.auth.form.enabled=true
 quarkus.http.auth.form.login-page=/login
 
 # Miscellaneous
-# quarkus.resteasy-json.default-json=false
+quarkus.resteasy-json.json-default=false
