--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,12 @@ quarkus.http.auth.form.login-page=/login
 
 # Miscellaneous
 quarkus.resteasy-json.json-default=false
+
+# Mailer
+quarkus.mailer.from=contacto@romsal.com.do
+quarkus.mailer.host=smtp.sendgrid.net
+quarkus.mailer.port=465
+quarkus.mailer.ssl=true
+quarkus.mailer.username=test
+quarkus.mailer.password=test
+quarkus.mailer.mock=false
