Fix design and configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ quarkus.http.non-application-root-path=/app
 
 # -- DATASOURCE CONFIGURATION
 quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=test
-quarkus.datasource.password=test
+quarkus.datasource.username=${DATASOURCE_USERNAME}
+quarkus.datasource.password=${DATASOURCE_PASSWORD}
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost/test
 
 quarkus.hibernate-orm.log.sql=true
