--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,10 +21,9 @@ quarkus.http.auth.form.login-page=/login
 # Miscellaneous
 
 # Mailer
+quarkus.mailer.host=smtp.romsal.com.do
+quarkus.mailer.port=25
+quarkus.mailer.ssl=false
 quarkus.mailer.from=contacto@romsal.com.do
-quarkus.mailer.host=smtp.sendgrid.net
-quarkus.mailer.port=465
-quarkus.mailer.ssl=true
-quarkus.mailer.username=test
-quarkus.mailer.password=test
-quarkus.mailer.mock=false
+quarkus.mailer.username=contacto@romsal.com.do
+quarkus.mailer.password=JAtDw)d4
