Add ssl capabilities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 # -- APPLICATION CONFIGURATION
 quarkus.http.host=0.0.0.0
+quarkus.http.port=80
+quarkus.http.ssl-port=443
+# quarkus.http.insecure-requests=redirect
+# quarkus.http.ssl.certificate.file=${CERT_CHAIN}
+# quarkus.http.ssl.certificate.key-file=${CERT_KEY}
 quarkus.http.non-application-root-path=/app
 
 # -- DATASOURCE CONFIGURATION
@@ -18,9 +23,9 @@ quarkus.http.auth.form.enabled=true
 # -- FORM AUTHENTICATTION
 quarkus.http.auth.form.login-page=/login
 
-# Miscellaneous
+# -- Miscellaneous
 
-# Mailer
+# -- Mailer
 quarkus.mailer.host=smtp.romsal.com.do
 quarkus.mailer.port=25
 quarkus.mailer.ssl=false
