Add ssl capabilities

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ STORAGE_PATH=/root/JAVA/romsal/storage/
 
 DATASOURCE_USERNAME=test
 DATASOURCE_PASSWORD=test
+CERT_CHAIN_PATH=/etc/letsencrypt/live/romsal.com.do/fullchain.pem
+CERT_KEY_PATH=/etc/letsencrypt/live/romsal.com.do/privkey.pem
