--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 # -- APPLICATION CONFIGURATION
 quarkus.http.host=0.0.0.0
+quarkus.http.port=80
+quarkus.http.ssl-port=443
+quarkus.http.ssl.certificate.file=${CERT_CHAIN_PATH}
+quarkus.http.ssl.certificate.key-file=${CERT_KEY_PATH}
 quarkus.http.non-application-root-path=/app
 
 # -- DATASOURCE CONFIGURATION
