--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,11 +17,10 @@ quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.database.generation=drop-and-create
 
 # -- SECURITY CONFIGURATION
-# quarkus.http.auth.basic=true
 quarkus.http.auth.form.enabled=true
 
 # -- FORM AUTHENTICATTION
-quarkus.http.auth.form.login-page=/login
+quarkus.http.auth.form.login-page=/admin/login
 
 # -- Miscellaneous
 
